--- a/ardublockly/test.html
+++ b/ardublockly/test.html
@@ -3,10 +3,10 @@
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!-- Ardublockly - These three files contain the compress version
     -->
-    <!-- <script src="../blockly/blockly_compressed.js"></script> -->
+    <script src="../blockly/blockly_compressed.js"></script>
+    <!-- <script src="../blockly/blockly_uncompressed.js"></script> -->
     <!-- <script src="../blockly/blocks_compressed.js"></script> -->
     <!-- <script src="../blockly/arduino_compressed.js"></script> -->
-    <script src="../blockly/blockly_uncompressed.js"></script>
     <script src="../blockly/blocks/logic.js"></script>
     <script src="../blockly/blocks/loops.js"></script>
     <script src="../blockly/blocks/math.js"></script>
@@ -553,7 +553,7 @@ var tabClick = function(clickedName) {
     document.getElementById("pane-code").className = "tab-pane active";
   }
 
-  Blockly.svgResize(workspace);
+  //Blockly.svgResize(workspace);
 };
 
                 // document.getElementById('playButton').addEventListener('click', executeBlockCode);
