--- a/cocoblockly/test.html
+++ b/cocoblockly/test.html
@@ -3,10 +3,10 @@
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!-- Ardublockly - These three files contain the compress version
     -->
-    <script src="../blockly/blockly_compressed.js"></script>
-    <!-- <script src="../blockly/blockly_uncompressed.js"></script> -->
-    <!-- <script src="../blockly/blocks_compressed.js"></script> -->
-    <!-- <script src="../blockly/arduino_compressed.js"></script> -->
+    <script src="blockly/blockly_compressed.js"></script>
+    <!-- <script src="blockly/blockly_uncompressed.js"></script> -->
+    <!-- <script src="blockly/blocks_compressed.js"></script> -->
+    <!-- <script src="blockly/arduino_compressed.js"></script> -->
     <script src="../blockly/blocks/logic.js"></script>
     <script src="../blockly/blocks/loops.js"></script>
     <script src="../blockly/blocks/math.js"></script>
@@ -44,16 +44,18 @@
     <script src="../blockly/generators/arduino/variables.js"></script>
     <!-- Default language js files, user selection appended to head
     on load -->
-    <script src="../blockly/msg/js/en.js"></script>
-    <script src="msg/en.js"></script>
-    <script src="https://blockly-demo.appspot.com/static/demos/prettify.js"></script>
-    <link href="https://blockly-demo.appspot.com/static/demos/prettify.css" rel="stylesheet">
-    <link rel="stylesheet" href="prettify/arduino.css">
-    <script src="ardublockly_toolbox.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.css">
+    <script src="blockly/en.js"></script>
+    <script src="blockly/msg/en.js"></script>
+
+    <!-- <script src="https://blockly-demo.appspot.com/static/demos/prettify.js"></script> -->
+    <!-- <link href="https://blockly-demo.appspot.com/static/demos/prettify.css" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet" href="prettify/arduino.css"> -->
+    <!-- <script src="ardublockly_toolbox.js"></script> -->
+    
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/mode/clike/clike.js"></script>
-    <link href="blockly-demo.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.css">
+    <link href="assets/cocoblockly.css" rel="stylesheet">
     <link rel="stylesheet" href="https://bootswatch.com/readable/bootstrap.min.css">
   </head><body>
     <div id="wrapper">
