--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -5,46 +5,48 @@
     -->
 
     <script src="blockly/blockly_compressed.js"></script>
-    <!-- <script src="blockly/blocks_compressed.js"></script> -->
+    <script src="blockly/blocks_compressed.js"></script>
     <!-- <script src="blockly/arduino_compressed.js"></script> -->
 
 
     <!-- <script src="blockly/blockly_uncompressed.js"></script> -->
-    <script src="../blockly/blocks/logic.js"></script>
-    <script src="../blockly/blocks/loops.js"></script>
-    <script src="../blockly/blocks/math.js"></script>
-    <script src="../blockly/blocks/text.js"></script>
-    <script src="../blockly/blocks/lists.js"></script>
-    <script src="../blockly/blocks/colour.js"></script>
-    <script src="../blockly/blocks/variables.js"></script>
-    <script src="../blockly/blocks/procedures.js"></script>
-    <script src="../blockly/blocks/arduino/io.js"></script>
-    <script src="../blockly/blocks/arduino/map.js"></script>
-    <script src="../blockly/blocks/arduino/procedures.js"></script>
-    <script src="../blockly/blocks/arduino/serial.js"></script>
-    <script src="../blockly/blocks/arduino/servo.js"></script>
-    <script src="../blockly/blocks/arduino/spi.js"></script>
-    <script src="../blockly/blocks/arduino/stepper.js"></script>
-    <script src="../blockly/blocks/arduino/time.js"></script>
-    <script src="../blockly/blocks/arduino/tone.js"></script>
-    <script src="../blockly/blocks/arduino/variables.js"></script>
-    <script src="../blockly/generators/arduino.js"></script>
-    <script src="../blockly/generators/arduino/boards.js"></script>
-    <script src="../blockly/generators/arduino/io.js"></script>
-    <script src="../blockly/generators/arduino/lists.js"></script>
-    <script src="../blockly/generators/arduino/logic.js"></script>
-    <script src="../blockly/generators/arduino/loops.js"></script>
-    <script src="../blockly/generators/arduino/map.js"></script>
-    <script src="../blockly/generators/arduino/math.js"></script>
-    <script src="../blockly/generators/arduino/procedures.js"></script>
-    <script src="../blockly/generators/arduino/serial.js"></script>
-    <script src="../blockly/generators/arduino/servo.js"></script>
-    <script src="../blockly/generators/arduino/spi.js"></script>
-    <script src="../blockly/generators/arduino/stepper.js"></script>
-    <script src="../blockly/generators/arduino/text.js"></script>
-    <script src="../blockly/generators/arduino/time.js"></script>
-    <script src="../blockly/generators/arduino/tone.js"></script>
-    <script src="../blockly/generators/arduino/variables.js"></script>
+<!--     <script src="blockly/blocks/logic.js"></script>
+    <script src="blockly/blocks/loops.js"></script>
+    <script src="blockly/blocks/math.js"></script>
+    <script src="blockly/blocks/text.js"></script>
+    <script src="blockly/blocks/lists.js"></script>
+    <script src="blockly/blocks/colour.js"></script>
+    <script src="blockly/blocks/variables.js"></script>
+    <script src="blockly/blocks/procedures.js"></script> -->
+
+    
+    <script src="blockly/blocks/arduino/io.js"></script>
+    <script src="blockly/blocks/arduino/map.js"></script>
+    <script src="blockly/blocks/arduino/procedures.js"></script>
+    <script src="blockly/blocks/arduino/serial.js"></script>
+    <script src="blockly/blocks/arduino/servo.js"></script>
+    <script src="blockly/blocks/arduino/spi.js"></script>
+    <script src="blockly/blocks/arduino/stepper.js"></script>
+    <script src="blockly/blocks/arduino/time.js"></script>
+    <script src="blockly/blocks/arduino/tone.js"></script>
+    <script src="blockly/blocks/arduino/variables.js"></script>
+    <script src="blockly/generators/arduino.js"></script>
+    <script src="blockly/generators/arduino/boards.js"></script>
+    <script src="blockly/generators/arduino/io.js"></script>
+    <script src="blockly/generators/arduino/lists.js"></script>
+    <script src="blockly/generators/arduino/logic.js"></script>
+    <script src="blockly/generators/arduino/loops.js"></script>
+    <script src="blockly/generators/arduino/map.js"></script>
+    <script src="blockly/generators/arduino/math.js"></script>
+    <script src="blockly/generators/arduino/procedures.js"></script>
+    <script src="blockly/generators/arduino/serial.js"></script>
+    <script src="blockly/generators/arduino/servo.js"></script>
+    <script src="blockly/generators/arduino/spi.js"></script>
+    <script src="blockly/generators/arduino/stepper.js"></script>
+    <script src="blockly/generators/arduino/text.js"></script>
+    <script src="blockly/generators/arduino/time.js"></script>
+    <script src="blockly/generators/arduino/tone.js"></script>
+    <script src="blockly/generators/arduino/variables.js"></script>
     <!-- Default language js files, user selection appended to head
     on load -->
     <script src="blockly/en.js"></script>
@@ -499,10 +501,11 @@
                     {
                       css: false,
                       toolbox: toolBox,
+                      media: 'blockly/',
                           grid: {
                               spacing: 25,
                               length: 3,
-                              colour: "#ccc",
+                              colour: "#ddd",
                               snap: !0
                           },
                           zoom: {
@@ -513,7 +516,7 @@
                               minScale: .3,
                               scaleSpeed: 1.2
                           },
-                          trashcan: !0
+                          trashcan: true
                     });
                 var defaultBlocks = document.getElementById('blocklyDefault');
               
