add chip reference

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -181,6 +181,14 @@
           </div>
         </div>
         <div id="simulator">
+                  <div class="head">
+            <h5 class="text-primary">Chip Reference</h5>
+        </div>
+                 <div id="chipview" style="padding: 20px">
+        <img src="assets/ATtiny85-pins.jpg"
+          class="img-responsive center-block">
+        </div>
+
           <div class="head">
             <h5 class="text-primary">Code Preview</h5>
         </div>
