move dir, add xml output

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -44,8 +44,8 @@
     <script src="blockly/generators/arduino/tone.js"></script>
     <script src="blockly/generators/arduino/variables.js"></script>
 
-    <script src="assets/cocoblock/cocoblock.js"></script>
-    <script src="assets/cocoblock/cocogen.js"></script>
+    <script src="cocojs/cocoblock/cocoblock.js"></script>
+    <script src="cocojs/cocoblock/cocogen.js"></script>
 
     <!-- Default language js files, user selection appended to head
     on load -->
@@ -181,6 +181,9 @@
               </div>
               <div class="tab-pane" id="pane-code">
                 <textarea id="codeDiv"></textarea>
+              </div>
+              <div class="tab-pane" id="pane-xml">
+                <textarea id="xmlCodeDiv"></textarea>
               </div>
             </div>
           </div>
