add initial example

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -209,6 +209,32 @@
         </div>
       </div>
     </div>
+
+
+<xml id="CocoBlockInitial">
+  <block type="arduino_functions" id="jGvSo#,:^f_1q!cAp!^_" x="88" y="88">
+    <statement name="LOOP_FUNC">
+      <block type="cocokey_print" id="T;Ce4d.)[K5En3^c#-p2">
+        <value name="COCOKEY_PRINT">
+          <block type="text" id="bG)fQsv?^)K`D9.jTZYx">
+            <field name="TEXT">HELLO COCOMAKE7</field>
+          </block>
+        </value>
+        <next>
+          <block type="cocokey_delay" id="loK6lz8.dOQ|nZs`7TI6">
+            <value name="COCOKEY_DELAY">
+              <block type="math_number" id="K5thlSB?ALf`jdhU8#wz">
+                <field name="NUM">500</field>
+              </block>
+            </value>
+          </block>
+        </next>
+      </block>
+    </statement>
+  </block>
+</xml>
+
+
     <xml id="ArduBlocklyToolbox">
       <sep></sep>
       <category id="catLogic" name="Logic">
@@ -527,9 +553,6 @@
         </block>
       </category>
     </xml>
-    <script>
-      // document.getElementById('playButton').addEventListener('click', executeBlockCode);
-    </script>
   
 
 </body></html>
