--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -212,18 +212,162 @@
 
 
 <xml id="CocoBlockInitial">
-    <block type="arduino_functions" id="jGvSo#,:^f_1q!cAp!^_" x="13" y="38">
+  <block type="arduino_functions" id="jGvSo#,:^f_1q!cAp!^_" x="13" y="38"></block>
+</xml>
+
+
+    <xml id="ArduBlocklyToolbox">
+
+       <category id="catCocoExamples" name="Examples">
+
+         <category id="catCocoTouch" name="Blink led">
+  <block type="arduino_functions" id="jGvSo#,:^f_1q!cAp!^_" x="38" y="63">
     <statement name="SETUP_FUNC">
-      <block type="coco_synth_setupvoice" id="9fjDuW0**LeWlN:Hx3-4">
+      <block type="variables_set" id="Y!~cJU3a=?G=,Es)*Ijn">
+        <field name="VAR">toggle_led</field>
+        <value name="VALUE">
+          <block type="logic_boolean" id="QU;Ks:IwY**S@FE=OwB!">
+            <field name="BOOL">TRUE</field>
+          </block>
+        </value>
+      </block>
+    </statement>
+    <statement name="LOOP_FUNC">
+      <block type="coco_interval_function" id="r:ECGQ86IKq+FiSe2NO;">
+        <field name="TIMER_NAME">coco_timer_1</field>
+        <value name="TIMER_INTERVAL">
+          <block type="math_number" id="sjzURX_#s9EdaCRi=%#3">
+            <field name="NUM">1000</field>
+          </block>
+        </value>
+        <statement name="DO_BLOCKS">
+          <block type="io_digitalwrite" id="dH-pBT`M6@_IS/d?X3|e">
+            <field name="PIN">PB4</field>
+            <value name="STATE">
+              <block type="variables_get" id="q.QhVw^ad%/Kn/#YwKN_">
+                <field name="VAR">toggle_led</field>
+              </block>
+            </value>
+            <next>
+              <block type="variables_set" id="]/]lgm@@vkz}nFEtq|lm">
+                <field name="VAR">toggle_led</field>
+                <value name="VALUE">
+                  <block type="logic_negate" id="d|.]5P?^m73aRm8sYLZD">
+                    <value name="BOOL">
+                      <block type="variables_get" id="P4Du@TFbd-b,n)dgM=jd">
+                        <field name="VAR">toggle_led</field>
+                      </block>
+                    </value>
+                  </block>
+                </value>
+              </block>
+            </next>
+          </block>
+        </statement>
+      </block>
+    </statement>
+  </block>
+         </category>
+                           <category id="catCocoTouch" name="CocoTouch to Midi">
+  <block type="arduino_functions" id="jt2UYe/a:4opih^:VQ`^" x="37" y="38">
+    <statement name="LOOP_FUNC">
+      <block type="cocotouch_touched" id="le|kxys6yaW20{S|+eXd">
+        <statement name="COCOTOUCH_DOTOUCHED">
+          <block type="cocomidi_sendcchires" id="g_(mUH|XSPN*et/tmi_M">
+            <value name="COCOMIDI_VALUE">
+              <block type="variables_get" id="]y8:aJT_sqB}[0.oBL7.">
+                <field name="VAR">filtered_value</field>
+              </block>
+            </value>
+            <value name="COCOMIDI_CHAN">
+              <block type="math_number" id="g(|%*{Au|EA*BcTk[w8S">
+                <field name="NUM">1</field>
+              </block>
+            </value>
+          </block>
+        </statement>
+        <next>
+          <block type="cocomidi_update" id="6jAg-g-R-821#79iBZX`"></block>
+        </next>
+      </block>
+    </statement>
+  </block>                           
+</category>
+               <category id="catCocoMidi" name="CocoMidi">
+                 <block type="arduino_functions" id="Gfs=i-2ol,.H[PFJytg(" x="63" y="88">
+    <statement name="LOOP_FUNC">
+      <block type="cocomidi_sendnote_var" id="SZV=[c-09L;lgu-cC[80">
+        <value name="COCOMIDI_STATE">
+          <block type="cocomidi_note_state" id="6t}AyCckvHfyBJMQ[ps]">
+            <field name="MIDI_NOTE_STATE">MIDI_NOTEON</field>
+          </block>
+        </value>
+        <value name="COCOMIDI_CHAN">
+          <block type="math_number" id="(lY+A#b}:9?v@oBmied%">
+            <field name="NUM">22</field>
+          </block>
+        </value>
+        <value name="COCOMIDI_VEL">
+          <block type="math_number" id="m2?u-m:pR+U*[DwmjnWj">
+            <field name="NUM">127</field>
+          </block>
+        </value>
+        <next>
+          <block type="cocomidi_delay" id="RQ[U*2U`nuOtn%pam3YI">
+            <value name="COCOMIDI_DELAY">
+              <block type="math_number" id="eSzr;WN5_[7@r0NC:KX=">
+                <field name="NUM">500</field>
+              </block>
+            </value>
+            <next>
+              <block type="cocomidi_sendnote_var" id="UvQ0RrSBXTYq@_/^jy7w">
+                <value name="COCOMIDI_STATE">
+                  <block type="cocomidi_note_state" id="w|pPWlU2{F*#yk36=]HU">
+                    <field name="MIDI_NOTE_STATE">MIDI_NOTEON</field>
+                  </block>
+                </value>
+                <value name="COCOMIDI_CHAN">
+                  <block type="math_number" id="]U=BoPM|4M@H0xRru9=l">
+                    <field name="NUM">22</field>
+                  </block>
+                </value>
+                <value name="COCOMIDI_VEL">
+                  <block type="math_number" id="4XPw~(I-5AX_[gAP[RDl">
+                    <field name="NUM">127</field>
+                  </block>
+                </value>
+                <next>
+                  <block type="cocomidi_delay" id="6Gy8(ln!)232WCTbtczw">
+                    <value name="COCOMIDI_DELAY">
+                      <block type="math_number" id="9QQMKwX.es;R|a1KkB8C">
+                        <field name="NUM">500</field>
+                      </block>
+                    </value>
+                  </block>
+                </next>
+              </block>
+            </next>
+          </block>
+        </next>
+      </block>
+    </statement>
+  </block>
+</category>
+              <category id="catCocoSynth" name="CocoSynth">
+               <block type="arduino_functions" id="^}@SOl,N#YB49.qgQN]M" x="38" y="38">
+    <statement name="SETUP_FUNC">
+      <block type="coco_synth_setupvoice" id="jP,[^(j_i6y1/vP,x1|8" inline="false">
         <field name="COCO_VOICE">0</field>
         <field name="COCO_WAVEFORM">SINE</field>
         <field name="COCO_ENVELOPE">ENVELOPE0</field>
         <field name="COCO_PITCH">77</field>
         <field name="COCO_LENGTH">60</field>
         <field name="COCO_MOD">64</field>
-        <comment pinned="false" h="80" w="160">Sine wave instrument</comment>
+        <comment pinned="true" h="80" w="160">Connect your speaker to pin 5
+Sine wave instrument
+        </comment>
         <next>
-          <block type="coco_synth_setupvoice" id="v@H2JdI[^yF`F7I_AU(6">
+          <block type="coco_synth_setupvoice" id="^pTol#6@O}6=7MR%rEk`" inline="false" collapsed="true">
             <field name="COCO_VOICE">1</field>
             <field name="COCO_WAVEFORM">NOISE</field>
             <field name="COCO_ENVELOPE">ENVELOPE0</field>
@@ -236,48 +380,48 @@
       </block>
     </statement>
     <statement name="LOOP_FUNC">
-      <block type="cocosynth_interval_function" id="5bbjoNE.}*k/~Bl|wdL6">
+      <block type="cocosynth_interval_function" id="~B8r^bj{E;NjR;M~,}8[">
         <field name="TIMER_NAME">synth_timer_1</field>
-        <comment pinned="false" h="80" w="160">every 1 sec trigger metronome</comment>
+        <comment pinned="true" h="80" w="160">every 1 sec trigger metronome</comment>
         <value name="TIMER_INTERVAL">
-          <block type="math_number" id="PEuHc4nE_rOge%o7~yU~">
+          <block type="math_number" id="!!xw1WI#qCYFd*DDt,v9">
             <field name="NUM">1000</field>
           </block>
         </value>
         <statement name="DO_BLOCKS">
-          <block type="coco_synth_trigger" id="g{+HCVfJXK#mpWCOqAi8">
+          <block type="coco_synth_trigger" id="k#**O~xu3VaEGMV6q8vc">
             <value name="NAME">
-              <block type="math_number" id="gW~mw;,`#Yq-^#Yu#Tp]">
+              <block type="math_number" id="TM=3w+Rs:.2tTeaIrH!q">
                 <field name="NUM">0</field>
               </block>
             </value>
           </block>
         </statement>
         <next>
-          <block type="cocosynth_interval_function" id="^lkEl~w|)Upp1Bzy2oj6">
+          <block type="cocosynth_interval_function" id="wce5](b4h6H:U4}MwHwL">
             <field name="TIMER_NAME">synth_timer_2</field>
             <comment pinned="false" h="80" w="160">every 2 sec trigger noise instrument</comment>
             <value name="TIMER_INTERVAL">
-              <block type="math_number" id="v?TH:FKe]z#G)1t-rVmg">
+              <block type="math_number" id="yA;mqzu%REf[`Dna]wR,">
                 <field name="NUM">2000</field>
               </block>
             </value>
             <statement name="DO_BLOCKS">
-              <block type="coco_synth_miditrigger" id=";+%]k7}=1qL.T1yyIn.K">
+              <block type="coco_synth_miditrigger" id="M`VMwwM4u?-[UOvcm:W[">
                 <value name="NAME">
-                  <block type="math_number" id="rR_lx}yMki4s?w{/M:Ti">
+                  <block type="math_number" id="I~kA!gArS8.44rAa=A!G">
                     <field name="NUM">1</field>
                   </block>
                 </value>
                 <value name="NOTE">
-                  <block type="math_random_int" id="|ua!nJ84(f.kklm,qVtK">
+                  <block type="math_random_int" id="U46gXu#9Iome+Y(VM,Ct">
                     <value name="FROM">
-                      <block type="math_number" id="~JrqvMk`R[7Z4|U,J;R`">
+                      <block type="math_number" id="_QV*zM@aq-0U}u14)gdX">
                         <field name="NUM">1</field>
                       </block>
                     </value>
                     <value name="TO">
-                      <block type="math_number" id="(::r8?B{/^,M:eevq;H)">
+                      <block type="math_number" id="j8AdqP7W~_d.2{:o%;x2">
                         <field name="NUM">100</field>
                       </block>
                     </value>
@@ -290,10 +434,8 @@
       </block>
     </statement>
   </block>
-</xml>
-
-
-    <xml id="ArduBlocklyToolbox">
+</category>
+            </category>
       <sep></sep>
       <category id="catLogic" name="Logic">
         <block type="controls_if"></block>
@@ -665,6 +807,11 @@
                 <block type="coco_synth_setlength"></block>
 
 </category>
+
+            <sep></sep>
+
+
+
     </xml>
   
 
