add peak and velo

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -212,7 +212,6 @@
 
 
 <xml id="CocoBlockInitial">
-  <block type="arduino_functions" id="jGvSo#,:^f_1q!cAp!^_" x="13" y="38"></block>
 </xml>
 
 
@@ -810,7 +809,11 @@ Sine wave instrument
 
             <sep></sep>
 
+            <category id="catCocoUtil" name="CocoUtil">
+                            <block type="cocoutil_peakdetect"></block>
+                            <block type="cocoutil_getvelocity"></block>
 
+</category>
 
     </xml>
   
