add mova to toolbox

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -812,7 +812,19 @@ Sine wave instrument
             <category id="catCocoUtil" name="CocoUtil">
                             <block type="cocoutil_peakdetect"></block>
                             <block type="cocoutil_getvelocity"></block>
-
+  <block type="cocoutil_getmova" id="2aiF`je~9wv+%8u+HhEh" x="163" y="188">
+    <field name="COCO_NAME">coco_mova_1</field>
+    <value name="COCO_MA">
+      <block type="math_number" id="tR6T(Mzr*EsVe/*(f_uM">
+        <field name="NUM">0.2</field>
+      </block>
+    </value>
+    <value name="COCO_VALUE">
+      <block type="math_number" id="Xmi6=.7+8I(y_|V3*pIS">
+        <field name="NUM">0</field>
+      </block>
+    </value>
+  </block>
 </category>
 
     </xml>
