--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -95,7 +95,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="dropdown">
+<!--               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">File <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li>
@@ -112,7 +112,7 @@
                     <a href="#">Separated link</a>
                   </li>
                 </ul>
-              </li>
+              </li> -->
               <li id="mode-group">
                 <p class="navbar-text">View:</p>
                 <div class="btn-group" data-toggle="buttons" role="group">
@@ -153,7 +153,7 @@
               </li>
             </ul>
 
-            <ul class="nav navbar-nav navbar-right">
+    <!--         <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Help&nbsp;<span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -172,7 +172,7 @@
                   </li>
                 </ul>
               </li>
-            </ul>
+            </ul> -->
             <div class="dropdown navbar-btn">
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                 <li>
