--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -70,7 +70,7 @@
     <script type="text/javascript" src="vendor/codemirror.js"></script>
     <script type="text/javascript" src="vendor/clike.min.js"></script>
     <script type="text/javascript" src="vendor/split.min.js"></script>
-    <script type="text/javascript" src="vendor/socket.io-1.4.5.js"></script>
+    <!-- <script type="text/javascript" src="vendor/socket.io-1.4.5.js"></script> -->
 
 
     <script type="text/javascript" src="cocojs/coco.js"></script>
