doc save, modified title, new file

--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -108,6 +108,9 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">File <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li>
+                    <a onClick="CocoBlockly.newFile()" href="#">New</a>
+                  </li>                
+                  <li>
                     <a onClick="CocoBlockly.openFile()" href="#">Open</a>
                   </li>
                   <li>
@@ -124,6 +127,10 @@
                   <li>
                     <a href="#">About</a>
                   </li>
+                  <li role="separator" class="divider"></li>
+                  <li>
+                    <a href="#">Exit</a>
+                  </li>                  
                 </ul>
               </li>
               <li id="mode-group">
