--- a/cocoblockly/index.html
+++ b/cocoblockly/index.html
@@ -1,6 +1,6 @@
 <html><head>
     <title>CocoBlocks for CocoMake7</title>
-    <link rel="stylesheet" href="assets/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/theme.min.css">
     <link rel="stylesheet" href="vendor/codemirror.min.css">
     <link rel="stylesheet" href="assets/blockly_style.css">
     <link rel="stylesheet" href="assets/cocoblockly.css">
